[gd_scene load_steps=2 format=3 uid="uid://bdidkytb8qj60"]

[ext_resource type="Script" path="res://scripts/hub.gd" id="1_hxo26"]

[node name="hub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hxo26")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="WorkshopLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 50
text = "Workshop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 119.0
offset_right = 1152.0
offset_bottom = 188.0
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 194.0
offset_right = 42.0
offset_bottom = 234.0
alignment = 1

[node name="ShopLabel" type="Label" parent="ShopBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Shop"
horizontal_alignment = 1

[node name="HealFullButton" type="Button" parent="ShopBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Heal 50 HP (50₽)"

[node name="IncreaseMaxHPButton" type="Button" parent="ShopBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Increase max HP (100₽)"

[node name="IncreaseDamageButton" type="Button" parent="ShopBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Increase bullet damage (100₽)"

[node name="IncreaseMagazineButton" type="Button" parent="ShopBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Increase ammo size (100₽)"

[node name="DecreaseReloadTimeButton" type="Button" parent="ShopBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Decrease reload time (100₽)"

[node name="IncreaseStaminaButton" type="Button" parent="ShopBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Increase stamina (150₽)"

[node name="ContinueBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -221.0
offset_top = -63.0
offset_right = 195.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="Button" parent="ContinueBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="QuitToMainMenuButton" type="Button" parent="ContinueBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit to main menu
"

[connection signal="pressed" from="ShopBox/HealFullButton" to="." method="_on_heal_full_button_pressed"]
[connection signal="pressed" from="ShopBox/IncreaseMaxHPButton" to="." method="_on_increase_max_hp_button_pressed"]
[connection signal="pressed" from="ShopBox/IncreaseDamageButton" to="." method="_on_increase_damage_button_pressed"]
[connection signal="pressed" from="ShopBox/IncreaseMagazineButton" to="." method="_on_increase_magazine_button_pressed"]
[connection signal="pressed" from="ShopBox/DecreaseReloadTimeButton" to="." method="_on_decrease_reload_time_button_pressed"]
[connection signal="pressed" from="ShopBox/IncreaseStaminaButton" to="." method="_on_increase_stamina_button_pressed"]
[connection signal="pressed" from="ContinueBox/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ContinueBox/QuitToMainMenuButton" to="." method="_on_quit_to_main_menu_button_pressed"]
